add the create tab

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       <!-- Footer -->
         <div id="footer">
           <ul class="copyright">
-            <li>Project GitHub: <a href="https://github.com/chlablak/tweb-pollson">tweb-pollson</a></li>
+            <li>Project GitHub: <a href="https://github.com/chlablak/pollson">pollson</a></li>
             <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
           </ul>
         </div>
