resize main div when panel grows up (issue #4 workaround)

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
 
     <!-- Scripts -->
       <script src="assets/html5up-astral/js/jquery.min.js"></script>
+      <script src="assets/html5up-astral/js/jquery.ba-resize.min.js"></script>
       <script src="assets/html5up-astral/js/skel.min.js"></script>
       <script src="assets/html5up-astral/js/skel-viewport.min.js"></script>
       <script src="assets/html5up-astral/js/util.js"></script>
