--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <noscript><link rel="stylesheet" href="assets/html5up-astral/css/noscript.css" /></noscript>
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/html5up-astral/css/ie8.css" /><![endif]-->
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-  <link href="styles.d41d8cd98f00b204e9800998ecf8427e.bundle.css" rel="stylesheet"></head>
+  <link href="styles.c4fbed05517dd43ddf80de7946f21f56.bundle.css" rel="stylesheet"></head>
   <body>
     <!-- Wrapper-->
       <div id="wrapper">
@@ -26,7 +26,7 @@
       <!-- Footer -->
         <div id="footer">
           <ul class="copyright">
-            <li>Project GitHub: <a href="https://github.com/chlablak/tweb-pollson">tweb-pollson</a></li>
+            <li>Project GitHub: <a href="https://github.com/chlablak/pollson">pollson</a></li>
             <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
           </ul>
         </div>
@@ -35,10 +35,11 @@
 
     <!-- Scripts -->
       <script src="assets/html5up-astral/js/jquery.min.js"></script>
+      <script src="assets/js/jquery.ba-resize.min.js"></script>
       <script src="assets/html5up-astral/js/skel.min.js"></script>
       <script src="assets/html5up-astral/js/skel-viewport.min.js"></script>
       <script src="assets/html5up-astral/js/util.js"></script>
       <!--[if lte IE 8]><script src="assets/html5up-astral/js/ie/respond.min.js"></script><![endif]-->
       <script src="assets/html5up-astral/js/main.js"></script>
-  <script type="text/javascript" src="inline.d41d8cd98f00b204e980.bundle.js"></script><script type="text/javascript" src="styles.b2328beb0372c051d06d.bundle.js"></script><script type="text/javascript" src="main.f0cc98c5b5c7661042de.bundle.js"></script></body>
+  <script type="text/javascript" src="inline.d41d8cd98f00b204e980.bundle.js"></script><script type="text/javascript" src="styles.b2328beb0372c051d06d.bundle.js"></script><script type="text/javascript" src="main.3a5df9b6906b6eb30f32.bundle.js"></script></body>
 </html>
