testing area for questions components

--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
     <noscript><link rel="stylesheet" href="assets/html5up-astral/css/noscript.css" /></noscript>
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/html5up-astral/css/ie8.css" /><![endif]-->
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-  <link href="styles.c4fbed05517dd43ddf80de7946f21f56.bundle.css" rel="stylesheet"></head>
+  <link href="styles.22ca061681b5f07e9cb262c0ece3177a.bundle.css" rel="stylesheet"></head>
   <body>
     <!-- Wrapper-->
       <div id="wrapper">
@@ -26,7 +26,7 @@
       <!-- Footer -->
         <div id="footer">
           <ul class="copyright">
-            <li>Project GitHub: <a href="https://github.com/chlablak/pollson">pollson</a></li>
+            <li>GitHub: <a href="https://github.com/chlablak/pollson">pollson</a></li>
             <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
           </ul>
         </div>
@@ -41,5 +41,5 @@
       <script src="assets/html5up-astral/js/util.js"></script>
       <!--[if lte IE 8]><script src="assets/html5up-astral/js/ie/respond.min.js"></script><![endif]-->
       <script src="assets/html5up-astral/js/main.js"></script>
-  <script type="text/javascript" src="inline.d41d8cd98f00b204e980.bundle.js"></script><script type="text/javascript" src="styles.b2328beb0372c051d06d.bundle.js"></script><script type="text/javascript" src="main.3a5df9b6906b6eb30f32.bundle.js"></script></body>
+  <script type="text/javascript" src="inline.d41d8cd98f00b204e980.bundle.js"></script><script type="text/javascript" src="styles.58e065928ed8ebd0b582.bundle.js"></script><script type="text/javascript" src="main.4538697608a86edc1252.bundle.js"></script></body>
 </html>
