--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/html5up-astral/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/html5up-astral/css/noscript.css" /></noscript>
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/html5up-astral/css/ie8.css" /><![endif]-->
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
   </head>
   <body>
     <!-- Wrapper-->
